--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,3 +1,26 @@
-input {
+#mood-form {
+    margin: auto;
+    text-align: center;
+}
+
+#mood-name {
     display: block;
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    width: 400px;
+}
+
+button {
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    width: 100%;
+}
+
+button:hover {
+    background-color: white;
+    color: black;
 }
