--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -11,7 +11,6 @@
 
 #mood-name {
     display: block;
-    padding: 10px;
     border: none;
     border-radius: 3px;
     width: 100%;
@@ -19,6 +18,7 @@
 
 #add-item {
     display: flex;
+    width: 100%;
 }
 
 .add-btn {
@@ -28,6 +28,7 @@
     border: none;
     border-radius: 3px;
     width: 100%;
+    cursor: pointer;
 }
 
 .add-btn:hover {
@@ -42,4 +43,5 @@
     border: none;
     border-radius: 3px;
     width: 100%;
+    cursor: pointer;
 }
