--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -4,8 +4,9 @@
     margin-bottom: 100px;
 }
 
+/* nameBoard needs to be width: 100% when on mobile */
 #nameBoard {
-    width: 50%;
+    width: 70%;
     margin: auto;
 }
 
@@ -26,6 +27,7 @@
 #input-container {
     display: flex;
     height: 100vh;
+    width: 100vw;
     background-image: url(../img/patrick-fore-HVFYFns30-I-unsplash.jpg);
     background-position: center;
     background-size: cover;
@@ -73,4 +75,28 @@
 .text-card {
     padding: 10px;
     margin: 10px 0;
+}
+
+@media (min-width: 576px) {
+    #nameBoard {
+        width: 60%;
+    }
+}
+
+@media (min-width: 768px) {
+    #nameBoard {
+        width: 50%;
+    }
+}
+
+@media (min-width: 992px) {
+    #nameBoard {
+        width: 50%;
+    }
+}
+
+@media (min-width: 1200px) {
+    #nameBoard {
+        width: 50%;
+    }
 }
