--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,12 +1,14 @@
+/* THIS IS MOBILE CSS */
 #moodBox {
-    width: 50%;
+    width: 90%;
     margin: auto;
     margin-bottom: 100px;
+    margin-top: 100px;
 }
 
 /* nameBoard needs to be width: 100% when on mobile */
 #nameBoard {
-    width: 70%;
+    width: 90%;
     margin: auto;
 }
 
@@ -97,6 +99,9 @@
 
 @media (min-width: 1200px) {
     #nameBoard {
+        width: 50%;
+    }
+    #moodBox {
         width: 50%;
     }
 }
